<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
        
    <TextView
        android:id="@+id/tv_myid_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_myid"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <TextView
        android:id="@+id/tv_myid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />


    <TextView
        android:id="@+id/tv_registries_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_registries"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/tvl_registries_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sent" />

        <TextView
            android:id="@+id/tv_registries_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/tvl_registries_awaiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_awaiting" />

        <TextView
            android:id="@+id/tv_registries_awaiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_server_access_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_server_access"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/tvl_last_server_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_last_server_access" />

        <TextView
            android:id="@+id/tv_last_server_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/tvl_last_server_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_last_server_update" />

        <TextView
            android:id="@+id/tv_last_server_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_send_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/txt_send_data" />

    <Button
        android:id="@+id/export_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Exportar DB" />

</LinearLayout>