<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF" >

    <TextView
        android:id="@+id/tv_registries_sent_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_registries_sent"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvl_products_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_products_registered"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_products_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvl_weight_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_weight_registered"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_weight_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_my_contribute_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_my_contribute"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvl_contribute_campaign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_contribute_campaign"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_contribute_campaign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvl_contribute_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_contribute_position"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_contribute_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <WebView
        android:id="@+id/webViewSelfStats"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
