<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_blocked_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_blocked"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_blocked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_blocked"
        android:textAppearance="?android:attr/textAppearanceSmall" />

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:orientation="horizontal" >

	<TextView
	    android:id="@+id/tv_myid_title"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/title_myid2" />
	
    <TextView
        android:id="@+id/tv_myid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

	</LinearLayout>

	<TextView
        android:id="@+id/tv_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/title_email"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/imgbtn_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_email"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_telephone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/title_telephone"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/imgbtn_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_call"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" />

    </LinearLayout>
</LinearLayout>
